Center text inside project tiles
For some reason this was missing. Noticed that it was required with React JSX.

Text was centered in HTML without this line.

--- a/index.css
+++ b/index.css
@@ -163,6 +163,7 @@ p {
   font-family: Georgia;
   font-size: 26px;
   margin: 150px 60px 0px 60px;
+  text-align: center;
 }
 
 /*********************************************/
