Add margin for About section
Add same margin for about section as the other sections on the page

--- a/style.css
+++ b/style.css
@@ -144,6 +144,14 @@ p {
 }
 
 /*********************************************/
+/*                 About.                    */
+/*********************************************/
+#about {
+  margin: 0px 60px 60px 60px;
+}
+
+
+/*********************************************/
 /*                 Contact                   */
 /*********************************************/
 #contact {
