Rename heading to `project tiles`

--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ p {
 
 
 /*********************************************/
-/*                 Projects                  */
+/*             Project Tiles                 */
 /*********************************************/
 
 /*
