--- a/style.css
+++ b/style.css
@@ -137,6 +137,47 @@ p {
   margin: 0px 60px 60px 60px;
 }
 
+.websiteMockup {
+  position: relative;
+  top: 50px;
+}
+
+.websiteMockup .header {
+  position: absolute;
+  height: 30px;
+  width: 450px;
+  background: rgb(237, 237, 237);
+  border-radius: 10px 10px 0px 0px;
+}
+
+.websiteMockup .threeDots {
+  position: absolute;
+  margin: 10px;
+  display: grid;
+  grid-template-columns: 15px 15px 15px auto;
+}
+
+.websiteMockup .dot {
+  height: 10px;
+  width: 10px;
+  background: rgb(212, 209, 211);
+  border-radius: 100%;
+}
+
+.websiteMockup .hamburger {
+  position: absolute;
+  display: grid;
+  grid-template-rows: 5px 5px 5px auto;
+  margin-top: 10px;
+  margin-left: 420px;
+}
+
+.websiteMockup .line {
+  height: 3px;
+  width: 15px;
+  background: rgb(212, 209, 211);
+}
+
 
 /*********************************************/
 /*                 Contact                   */
