--- a/style.css
+++ b/style.css
@@ -196,6 +196,22 @@ p {
   width: 450px;
 }
 
+.projectDescription {
+  margin-top: 100px;
+  padding: 20px;
+  width: 450px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.projectTitle {
+  font-size: 30px;
+  font-weight: 1000;
+}
+
+.longDescription {
+  margin-top: 40px;
+}
 
 /*********************************************/
 /*                 Contact                   */
