Create project summary title for readability

--- a/style.css
+++ b/style.css
@@ -137,6 +137,10 @@ p {
   margin: 0px 60px 60px 60px;
 }
 
+/*********************************************/
+/*           Project Summary                 */
+/*********************************************/
+
 .projectStyle1{
   background: rgb(205, 0, 12);
   text-align: center;
