--- a/style.css
+++ b/style.css
@@ -30,6 +30,15 @@ p {
   margin: 0px 0px 15px 0px;
 }
 
+/* Adjusts margin for section links 
+   Can't get it to work for the thumbnail section. Also it introduces a new thumbnail. Thus I have removed it for now from the thumbnail section.   
+*/
+.mainSection::before {
+  content: '';
+  display: block;
+  height: 80px;
+}
+
 #logo {
   color: black;
   font-family: "Oleo Script";
