--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ p {
 /*           Project Summary                 */
 /*********************************************/
 
-.projectStyle1{
+.projectPomodoro{
   background: rgb(205, 0, 12);
   text-align: center;
   color: #FFFFFF; 
