Update projectPortfolio to `id`

--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ p {
   color: #FFFFFF; 
 }
 
-.projectPortfolio {
+#projectPortfolio {
   background: rgb(68, 128, 20);
   text-align: center;
   color: #FFFFFF; 
