Add margin for project tiles

--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ p {
   grid-template-columns: repeat(auto-fit,minmax(var(--projectTileSize), 1fr)); /* Make # of columns responsive*/
   grid-gap: 20px;
   z-index: 0; /* Set relative to navbar, index must be >=0 for hover to work */
+  margin: 100px 150px 0px 150px;
 }
 
 .project-img {
