--- a/style.css
+++ b/style.css
@@ -142,6 +142,11 @@ p {
 /*                 About.                    */
 /*********************************************/
 #about {
+  background: rgb(234, 234, 234);
+  padding-bottom: 50px;
+}
+
+#aboutText{
   margin: 0px 250px 60px 250px;
 }
 
