Remove full stop from comment

--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ p {
 }
 
 /*********************************************/
-/*                 About.                    */
+/*                 About                     */
 /*********************************************/
 #about {
   background: rgb(234, 234, 234);
