--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ p {
   font-size: 2em;
   margin-left: 30px;
 }
+
 /*********************************************/
 /*                   Navbar                  */
 /*********************************************/
@@ -248,6 +249,40 @@ p {
 .githubLink:visited {
   color: white;
 }
+
+
+/*********************************************/
+/*                 Articles                  */
+/*********************************************/
+#articles {
+  margin: 0px 250px 150px 250px;
+}
+
+.article {
+  margin-top: 80px;
+  display: grid;
+  grid-template-columns: 250px auto;
+  align-items: center;
+  justify-content: center;
+}
+
+.articleImage {
+  height: 200px;
+  width: 200px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 15px;
+}
+
+.articleTitle {
+  font-size: 30px;
+  font-weight: 1000;
+}
+
+.articleBlurb {
+  margin-top: 20px;
+}
+
 
 /*********************************************/
 /*                 Contact                   */
